--- a/DogBot.App/DogBot.App.csproj
+++ b/DogBot.App/DogBot.App.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <PackageReference Include="Discord.Net" Version="2.4.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+        <PackageReference Include="RestSharp" Version="106.12.0" />
     </ItemGroup>
 
 </Project>
